# scribing

./: README.md  colors.py  pyproject.toml  requirements.txt
notebooks/: 2025-08-25_phase-portraits.ipynb.ipynb  2025-08-28_phase-portraits.ipynb  2025-09-22_phase-plane-background.ipynb  pandas_brain_teasers.ipynb  python-concepts.ipynb  symbolic-computation.ipynb  template_notebook.ipynb
notebooks/PINNs/Literature Notes/: pinn_tutorial.ipynb
notebooks/chemistry/: chem_balancer.py
notebooks/good-python-habits/: habit_1_module.py
notebooks/kuramoto/: random_modular_graph.py
notebooks/linear-algebra/: weighted_sum.ipynb
notebooks/neuoscience/HH-model/: hh.py
notebooks/practice-problems/: 1D_potential.ipynb  1D_potential.md
notebooks/quantum/: quantum_helper_functions.py
notebooks/quantum/pennylane/: surface_plot.py
requirements/: requirements.template-requirements.txt
utils/: phase_linear_2D.py
