[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scribing"
version = "0.1.0"
description = "Project description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "networkx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"